--- a/report3/report3.ipynb
+++ b/report3/report3.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "### Random Directed Acyclic Graph\n",
     "\n",
-    "Time Complexity: O(n)\n",
+    "Time Complexity: O(n ^ 2)\n",
     "\n",
     "### Topological Sort with DFS on Adjacency List\n",
     "\n",
